--- a/styles/home.css
+++ b/styles/home.css
@@ -1,13 +1,4 @@
-*{
-    margin: 0;
-}
-
-nav{
-    height: 10vh;
-    display: flex;
-    justify-content: space-between;
-}
-
+/* STYLE home */
 main{
     height: 90vh;
     display: flex;
@@ -15,29 +6,91 @@ main{
     justify-content: center;
     align-items: center;
 
+    color: whitesmoke;
+    text-align: center;
+
     background-image: url("/img/background.jpg");
+    background-position: center top;
+    background-size: cover;
 }
+
+h1{
+    font-size: 48px;
+    font-weight: 400;
+}
+
+/* CARD CONTENT -> général */
 
 .container{
     display: flex;
-    gap: 2rem;
+    gap: 4rem;
     padding: 4rem;
 }
 
-.search-container{
-    background-color: rgba(255, 255, 255, 0.257);
+.content{
+    background-color: white;
+    border-radius: 1rem;
+    padding: 0 1.5rem;
+
     display: flex;
     flex-direction: column;
+
+    height: 50vh;
+    width: 300px;
+}
+
+/* CARD SEARCH */
+
+#btn-search{
+    background-color: #459e85;
+    border-radius: .5rem;
+
+    padding: .5rem;
+    text-align: center;
+
+    cursor: pointer;
+}
+
+.search-container{
     justify-content: space-around;
-    height: 40vh;
-    width: 200px;
+}
+
+.input-content{
+    display: flex;
+    flex-direction: column;
+}
+
+input{
+    background-color: whitesmoke;
+    border-radius: .3rem;
+    border: none;
+
+    padding: .5rem;
+}
+
+/* CARD RESULT */
+
+#departureName{
+    border-bottom: solid 1px black;
 }
 
 .result-container{
-    background-color: rgba(255, 255, 255, 0.257);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 40vh;
-    width: 200px;
+    justify-content: center;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+#notfound{
+    width: 80%;
+}
+
+#train{
+    width: 60%;
+}
+
+.trait{
+    width: 80%;
+    height: 2px;
+
+    background-color: #459e85;
 }
