--- a/styles/cart_bookings.css
+++ b/styles/cart_bookings.css
@@ -11,14 +11,65 @@
 
 .cart-content{
     border-radius: .5rem;
-    padding: 2rem 0;
-    width: 50%;
+    padding-top: 3rem;
+    width: 60vw;
 
     background-color: whitesmoke;
+}
 
+.cart-empty{
+    text-align: center;
+    padding-bottom: 3rem;
+}
+
+.cart-result{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
+    justify-content: center;
+}
+
+.result-wrap{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 2rem;
+
+    border-radius: .2rem;
+    background-color: rgb(234, 234, 237);
+
+    padding: 1rem;
+    width: 50vw;
+}
+
+.city-cart{
+    display: flex;
+}
+
+.btn-delete-cart, .btn-purchase-cart{
+    background-color: #459e85;
+    padding: .5rem .8rem;
+    border-radius: .3rem;
+
+    color: whitesmoke;
+    font-weight: 600;
+
+    cursor: pointer;
+}
+
+.purchase-footer-cart{
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 40%;
+    align-items: center;
+    background-color: #02002f;
+
+    padding: 1rem 0;
+    margin-top: 1rem;
+    border-radius: 0 0 .5rem .5rem;
+    width: 60vw;
+
+    color: whitesmoke;
 }
