--- a/styles/style.css
+++ b/styles/style.css
@@ -1,44 +1,86 @@
-@import url("home.css");
-@import url("results.css");
-@import url("cart_bookings.css");
+/* STYLE cart & booking */
 
-/* STYLE body et nav */
+.page-contenair{
+    background-color: rgb(234, 234, 237);
+    height: 90vh;
 
-/* général body */
-
-*{
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.decoration-none{
-    text-decoration: none;
+.cart-content{
+    border-radius: .5rem;
+    padding-top: 3rem;
+    width: 60vw;
+
+    background-color: whitesmoke;
 }
 
-.black{
-    color: black;
+.cart-empty{
+    text-align: center;
+    padding-bottom: 3rem;
 }
 
-/* NAV */
+.cart-result{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    justify-content: center;
+}
 
-nav{
-    height: 10vh;
+.result-wrap{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
 
-    padding: 0 2rem;
+    border-radius: .2rem;
+    background-color: rgb(234, 234, 237);
+
+    padding: 1rem;
+    margin-bottom: 1rem;
+    width: 50vw;
 }
 
-#logo{
-    color: #459e85;
-    font-weight: 800;
-    font-size: 2rem;
+.wrapper-booking{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#cart, #booking{
-    color: #02002F;
-    font-size: 1.2rem;
-    padding: 0 1rem;
+.city-cart{
+    display: flex;
 }
 
+.btn-delete-cart, .btn-purchase-cart{
+    background-color: #459e85;
+    padding: .5rem .8rem;
+    border-radius: .3rem;
+
+    color: whitesmoke;
+    font-weight: 600;
+
+    cursor: pointer;
+}
+
+.purchase-footer-cart{
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 40%;
+    align-items: center;
+    background-color: #02002f;
+
+    padding: 1rem 0;
+    margin-top: 1rem;
+    border-radius: 0 0 .5rem .5rem;
+    width: 60vw;
+
+    color: whitesmoke;
+}
+
+.wrapper-booking{
+
+}
